# order-accuracy

./: .env  .gitignore  .gitmodules  Makefile  README.md  docker-compose.yaml  export_requirements.txt  oa_makefiles.txt  oa_structure.txt  oa_submodules.txt  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yaml  integration.yaml  trivyimagescan.yaml  update-submodule.yaml
agent_configs/: addons.json  orders.json
dine-in/: .env.example  Dockerfile  Makefile  README.md  docker-compose.yaml  docker-compose.yml  entrypoint.sh  requirements.txt
dine-in/configs/: inventory.json  orders.json
dine-in/docs/: README.md
dine-in/src/: api.py  app.py  config.py  worker.py
docs/user-guide/: index.md  oa-get-started.md
gradio-ui/: gradio_app.py
ovms-service/: README.md  setup_models.sh
ovms-service/model-tools-venv/: pyvenv.cfg
rtsp-streamer/: start.sh
src/: __init__.py  config.py  final_report.py  interface.py  main.py  messaging.py  pipeline.py  rtsp_video_util.py  save_vlm_result.py  validate_addon.py  video_file_util.py  video_utils.py  vlm.py
take-away/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  ocr_component.py  requirements.txt
take-away/config/: application.yaml  orders.json
take-away/docs/: CODE_ANALYSIS.md  README.md
take-away/frame-selector-service/: dockerfile
take-away/gradio-ui/: dockerfile  gradio_app.py
take-away/rtsp-streamer/: Dockerfile  start.sh
take-away/src/: frame_pipeline.py  main.py  ocr_worker.py  yolo_worker.py
take-away/tests/: test_order_tracker.py
(+51 files in other folders)
