[project]
name = "order-accuracy"
version = "1.0.0"
description = "Modular Gradio app to detect order items in uploaded videos using a pipeline + VLM"
authors = [ { name = "Retail Agent" } ]
requires-python = ">=3.9"
dependencies = [
  "gradio",
  "moviepy",
  "requests",
  "pika",
  "watchdog",
  "minio",
  "rapidfuzz>=3.13.0",
  "opencv-python",
  "ultralytics"
]

[project.scripts]
order-accuracy = "main:main"

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "flake8",
  "mypy"
]

[tool.uv]
# Enables uv to manage the virtual environment in .venv automatically.
package = true

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
  "app",
  "config", 
  "demo",
  "interface",
  "main",
  "messaging",
  "pipeline",
  "video_utils",
  "vlm"
]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
